DevTools: NetworkPanel: fix timeline bar labels vertical alignment.
Fix UI regression.
See: https://codereview.chromium.org/474453002/

BUG=
NOTRY=true

Review URL: https://codereview.chromium.org/471703003

git-svn-id: svn://svn.chromium.org/blink/trunk@180273 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/networkLogView.css
+++ b/front_end/networkLogView.css
@@ -291,6 +291,7 @@
     bottom: 0;
     height: 13px;
     line-height: 13px;
+    margin: auto;
     font-size: 90%;
     color: rgba(0, 0, 0, 0.75);
     text-shadow: rgba(255, 255, 255, 0.25) 1px 0 0, rgba(255, 255, 255, 0.25) -1px 0 0, rgba(255, 255, 255, 0.333) 0 1px 0, rgba(255, 255, 255, 0.25) 0 -1px 0;
@@ -316,7 +317,7 @@
     color: rgba(0, 0, 0, 0.7);
     text-shadow: none;
     text-align: right;
-    margin-right: -2px;
+    margin-right: -1px;
 }
 
 .network-graph-label.before::after {
